--- a/Apps/kustomization.yaml
+++ b/Apps/kustomization.yaml
@@ -9,7 +9,7 @@ patchesJson6902:
     group: apps
     version: v1
     kind: Deployment
-    name: mynode-app
+    name: node-s-app
   patch: |-
     - op: replace
       path: /spec/replicas
