self heal false

--- a/AppSet/apps.yaml
+++ b/AppSet/apps.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: nodejs
+    namespace: bjex
   project: bjex
   source:
     path: Apps/
@@ -17,4 +17,4 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
